@@ -1,3 +1,8 @@
+2007-04-06  Uwe Kindler  <uwe_kindler@web.de>
+
+	* src/sam7ex256_misc.c Added hal_plf_eth_init() in order to initialise 
+	  the Micrel KS8721 PHY properly on the Olimex board
+
 2007-08-01  Uwe Kindler  <uwe_kindler@web.de>
 
 	* src/sam7ex256_misc.c Use the backlight of the lcd as a simple 1-bit LED
